# cross-platform-test-project-template

./: .gitignore  CMakeLists.txt
includes/: header.hpp
sources/: main.cpp
